项目日志v1.0完成

--- a/Python学习网站第一版/FlowerC文档/FlowerC项目日志v1.0/项目日志v1.0.md
+++ b/Python学习网站第一版/FlowerC文档/FlowerC项目日志v1.0/项目日志v1.0.md
@@ -36,9 +36,17 @@
 ![项目计划](项目计划.png){width=50%}
 ![学习指南](学习指南.png){width=50%}
 
-|组员|得分|
-|:---:|:---:|
-|李佳浩|95|
-|常如意|100|
-|李桂昇|100|
-|褚一满|100|
+#### 10月17日，明天就是第一轮的截止时间，虽然主力军即将考试，人手有些短缺，但我们还是完成了：在网站方面：主界面，登录/注册界面，教学界面和用户功能。软件工程文档方面：第一版的Study guide，需求文档，设计文档，测试文档，当然还有本篇记录。
+![网站代码](网站代码.png){width=60%}
+![文档](文档.png){width=60%}
+
+
+#### 在此第一轮制作就完工了，组员都很辛苦也很用功，希望我们能享受过程，做出让自己开心的作品
+
+#### *以下为打分表*
+|组员|贡献|得分|
+|:---:|:---|:---:|
+|李佳浩|记录了小组制作过程，并制作了一些文档，实现了登录与注册功能|95|
+|常如意|设计了各级界面的排版布局，内容与功能，查找了图片等必要资源|100|
+|李桂昇|修改完善了项目计划，制作了用户存储功能js，用户界面html|100|
+|褚一满|制作了主界面，登录/注册界面，教学界面，测试简化了js代码|100|
