--- a/Python学习网站第一版/FlowerC文档/FlowerC项目日志v1.0/项目日志v1.0.md
+++ b/Python学习网站第一版/FlowerC文档/FlowerC项目日志v1.0/项目日志v1.0.md
@@ -6,39 +6,39 @@
 ## 节点一（团队的组建和内容的选定）
 
 #### 8月26日，我们成功组队，第一次开会确定了组名和要做的东西(HTML学习网站)，明确分工，并建立了微信群方便及时沟通。
-![微信群照片](微信截屏.jpg){width=30%}
+<img src="微信截屏.jpg" width="30%" alt="微信群照片">
 
 ## 节点二（项目计划、任务表、网站设计图等初步文件的确立）
 
 #### 9月1日，我们创建了大致的任务表并整理成Excel，讨论初步探索了Git与Gitee并建好了小组gitee库，初步探讨了技术实现问题（决定基本可以全部使用前端实现HTML、CSS、javascript）。
-![任务表1](任务表1.png){width=50%}
+<img src="任务表1.png" width="50%" alt="任务表1">
 #### 9月2日，我们合力讨论完成了初版的项目计划word文档（虽然没有根据第四章内容不合格）
-![项目计划1](项目计划1.png){width=50%}
+<img src="项目计划1.png" width="50%" alt="项目计划1">
 
 #### 9月8日，我们的网站页面设计图出炉，进行一些初步的资源整理后开始按照设计图纸与教授提供的资料进行网站框架的搭建
-![网页设计](网页设计.jpg){width=50%}
+<img src="网页设计.jpg" width="50%" alt="网页设计">
 
 ## 节点三（网页内容的制作与功能的实现）
 
 #### 9月9日，已经制作出了首页和登录/注册界面的页面，我们在上课时制作了项目启动ppt并进行展示，更加明确了需要完成的内容与软件工程课程的教学目的。创建了Github库。
-![首页](首页.jpg){width=50%}
-![项目启动](项目启动.jpg){width=50%}
+<img src="首页.jpg" width="50%" alt="首页">
+<img src="项目启动.jpg" width="50%" alt="项目启动">
 
 #### 9月16日，教授提出修改计划的三轮为两轮，我们在这周更新了任务表，对每周和每轮的任务目标进行了调整同时进一步分工，准备同时进行用户界面以及教学界面的制作
-![任务表2](任务表2.png){width=50%}
+<img src="任务表2.png" width="50%" alt="任务表2">
 
 #### 9月23日，我们完成了菜单和教学部分第一级页面的制作，同时借助人工智能，使用indexedDB实现了登录/注册功能可用
-![菜单](菜单.png){width=50%}
-![关卡](关卡.png){width=50%}
-![js登录/注册代码](代码1.png){width=50%}
+<img src="菜单.png" width="50%" alt="菜单">
+<img src="关卡.png" width="50%" alt="关卡">
+<img src="代码1.png" width="50%" alt="js登录/注册代码">
 
 #### 9月27日，我们修改完善了项目计划，制作了需求文档以及study guide的前三个章节
-![项目计划](项目计划.png){width=50%}
-![学习指南](学习指南.png){width=50%}
+<img src="项目计划.png" width="50%" alt="项目计划">
+<img src="学习指南.png" width="50%" alt="学习指南">
 
 #### 10月17日，明天就是第一轮的截止时间，虽然主力军即将考试，人手有些短缺，但我们还是完成了：在网站方面：主界面，登录/注册界面，教学界面和用户功能。软件工程文档方面：第一版的Study guide，需求文档，设计文档，测试文档，当然还有本篇记录。
-![网站代码](网站代码.png){width=60%}
-![文档](文档.png){width=60%}
+<img src="网站代码.png" width="60%" alt="网站代码">
+<img src="文档.png" width="60%" alt="文档">
 
 
 #### 在此第一轮制作就完工了，组员都很辛苦也很用功，希望我们能享受过程，做出让自己开心的作品
