--- a/Python学习网站第二版/FlowerC文档/FlowerC项目日志v2.0/项目日志v2.0.md
+++ b/Python学习网站第二版/FlowerC文档/FlowerC项目日志v2.0/项目日志v2.0.md
@@ -89,6 +89,8 @@
 
 ## 节点五（用户进度查看与游戏化系统的上线）
 
-**12月9日
+**12月9日，完成了用户系统与练习获得金币**
+<img src="用户系统.png" width="50%" alt="用户系统">
+<img src="金币框.png" width="50%" alt="金币框">
 
-## 节点六（）
+## 最终报告
